2011-12-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/abswordseg.cpp (AbsWordSeg::CreateWordList):
	  - Tokenize punctuation marks in chunks, not in characters,
	    to prevent breaking word in between, fixing problem with `` or ''
	    at line beginning in LaTeX. This should also be true in general.

2011-12-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/maxwordseg.cpp (MaxWordSeg::WordSegArea):
	  - Reformat source a little bit.

2011-12-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/abswordseg.cpp (AbsWordSeg::SwapLinkSep, AbsWordSeg::GetBestSen):
	  - Reformat source a little bit.

2011-12-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/abswordseg.cpp (AbsWordSeg::CreateWordList):
	  - Reformat source a little bit.

2011-12-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/abswordseg.cpp (AbsWordSeg::CreateWordList):
	  - Guard against i being 0 before accessing sen[i-1].

2011-12-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/abswordseg.cpp (AbsWordSeg::IsNumber, AbsWordSeg::IsEnglish):
	  - Replace ASCII range checks with ctype.h functions.

2011-12-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/abswordseg.cpp (AbsWordSeg::CreateWordList):
	  - Replace ASCII range checks with ctype.h functions.
	  - Replace TIS-620 range check with macro function.

2011-12-07  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Post-release version suffix added.
	* data/swathdic.lst: Remove a typo entry.

2011-03-20  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in, NEWS:
	=== Version 0.4.1 ===

2011-03-20  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Add AC_CONFIG_MACRO_DIR, as suggested by libtoolize.
	* Makefile.am: Add ACLOCAL_AMFLAGS, as suggested by libtoolize.

2011-03-20  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in, -swath.spec.in: Remove the outdated, unmaintained file.
